[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player1.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/pistol_person_pete.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 27.7657

[node name="Player1" type="KinematicBody2D"]

input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
SPEED = 450
ROTATION_SPEED = 2.5
MUZZLE_DEVIATION = 0.25
bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = 1.5708
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="gun_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="bullet_container" type="Node" parent="." index="3"]

[node name="muzzle_1" type="Position2D" parent="." index="4"]

position = Vector2( 32.6143, -30.6933 )
_sections_unfolded = [ "Transform" ]

[node name="muzzle_2" type="Position2D" parent="." index="5"]

position = Vector2( 34.7607, 34.7715 )
_sections_unfolded = [ "Transform" ]


